renamed files to clean import pathways; moved background styling out of each page component, to make more DRY; fixed page titles to increase legibility and make consistent

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,7 @@
   pointer-events: none;
 }
 
+.pageBackground{
+  background-attachment: fixed;
+  background-size: 'cover';
+}
